force-app/main/default/objects/AIG_Plan_Opportunity_Relationship__c/AIG_Plan_Opportunity_Relationship__c.object-meta.xml
<CustomObject>
    <label>Plan Opportunity Relationship</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Plan Opportunity Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Opportunity Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>