force-app/main/default/objects/AIG_Plan_Opportunity_Relationship__c/fields/AIG_Asset__c.field-meta.xml
<CustomField>
    <fullName>AIG_Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Plan_Opportunity_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>