force-app/main/default/objects/AIG_Plan_Opportunity_Relationship__c/fields/AIG_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AIG_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Converted Plans</relationshipLabel>
    <relationshipName>Plan_Opportunity_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>