force-app/main/default/objects/AIG_Plan_Opportunity_Relationship__c/fields/AIG_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>AIG_Opportunity_Stage__c</fullName>
    <formula>TEXT(AIG_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>