force-app/main/default/objects/AIG_Plan_Opportunity_Relationship__c/fields/AIG_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>AIG_Opportunity_Type__c</fullName>
    <formula>TEXT(AIG_Opportunity__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>